# Watcher

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/templates/: base.jinja.html  index.jinja.html
src/watcher/: __init__.py  constants.py  home.py
src/watcher/forms/: __init__.py
src/watcher/static/: main.js  style.css
src/watcher/templates/: _formhelpers.jinja.html  base.jinja.html  display.jinja.html  index.jinja.html
