[project]
name = "watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kc-nremc", email = "k_courtney@nremc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
]

[project.scripts]
watcher = "watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
